## Process this file with automake to produce Makefile.in.

include $(top_srcdir)/gnome-doc-utils.make
dist-hook: doc-dist-hook

DOC_MODULE = amide
DOC_ENTITIES = legal.xml
DOC_INCLUDES =
DOC_FIGURES = \
	figures/amide_main_window.png \
	figures/study_tree.png

DOC_LINGUAS = es

DISTCLEANFILES = *~ */*~
